hphp/test/slow/no_php/unreadable.php.expectf
Fatal error: require_once(%sphpincludetest%s): File not found in %s/test/slow/no_php/unreadable_impl.inc on line 4
